@startuml

class Edificio {
    - contenido: Interactuable
    - contadorVisitas: int
    + visitar(r : Reloj): Interactuable
}

class Ciudad {
    - posicion : Posicion
    + visitar(edificio : Edificio, r : Reloj): Interactuable
}

class Policia {
    + visitar(edificio: Edificio, r : Reloj): Interactuable
}

class Reloj{
    + incrementar(tiempo : Tiempo): void
    - verificarTiempoExcedido() : void
}

class Tiempo{
    - horas : double
    + incrementar(horas : double)
    + esMayor(tiempo : Tiempo): bool

}

Policia -->"1" Ciudad: está
Ciudad o-- "3" Edificio
Edificio ..> Reloj: actualiza
Reloj o-- "2" Tiempo


@enduml
